--- a/TCY/Sources/MapGMaps.fmx
+++ b/TCY/Sources/MapGMaps.fmx
@@ -9,15 +9,17 @@ inherited FMapGMaps: TFMapGMaps
   DesignerDeviceName = 'Google Nexus 4'
   DesignerOrientation = 0
   DesignerOSVersion = ''
-  object Timer1: TTimer [0]
-    Interval = 5000
-    OnTimer = Timer1Timer
-    Left = 112
-    Top = 232
-  end
   inherited RectClient: TRectangle
     Height = 545.000000000000000000
-    object TMSFMXWebGMaps1: TTMSFMXWebGMaps [0]
+    inherited rectMenuLateral: TRectangle
+      inherited rectTop: TRectangle
+        inherited imgTop: TImage
+          MultiResBitmap.Height = 108
+          MultiResBitmap.Width = 205
+        end
+      end
+    end
+    object TMSFMXWebGMaps1: TTMSFMXWebGMaps
       Align = Client
       Height = 360.000000000000000000
       Width = 384.000000000000000000
@@ -39,17 +41,10 @@ inherited FMapGMaps: TFMapGMaps
       ControlsOptions.OverviewMapControl.Visible = False
       TabOrder = 2
       Version = '1.8.0.2'
+      OnDownloadFinish = TMSFMXWebGMaps1DownloadFinish
       OnMarkerClick = TMSFMXWebGMaps1MarkerClick
       OnMarkerDragEnd = TMSFMXWebGMaps1MarkerDragEnd
       OnMapClick = TMSFMXWebGMaps1MapClick
-    end
-    inherited rectMenuLateral: TRectangle
-      inherited rectTop: TRectangle
-        inherited imgTop: TImage
-          MultiResBitmap.Height = 108
-          MultiResBitmap.Width = 205
-        end
-      end
     end
     object rectMarkers: TRectangle
       Align = Bottom
@@ -131,37 +126,38 @@ inherited FMapGMaps: TFMapGMaps
               PNG = {
                 89504E470D0A1A0A0000000D494844520000002C0000002C08060000001E845A
                 01000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                03C3494441545847ED98DD4B944114C677972C4385C08F202883CC32C41BABBF
-                4110A43F40A482D06EBACC8BE82ABA89AE823E202830F1324A11BCEE36EB4AB2
-                CC2013825221D0285476FB3D336765DD0F77DCDEF503F6818773E6CC9973CECE
-                CC3BEFBC1BABA0820A761671939121954A55C3D3D2E3F1F867F8D775EC552493
-                C966F8DAD86CE6C8903019199851ADDA01D1F4481179C1E5466405B36F1BD802
-                1DC8F3340F89D2CDD6E09C22C07F2F1905B5B3F2BD14D542B31ED6D07613812D
-                89F80D97B0CDD21E4E241253EA2B1525174CA14D882BF012C5542157286801F9
-                0B7E83C2097884FE46642DFD6BC857F03985FF446E1B25154CB16D88DB14D24A
-                117F90E3B427D0E72964C93919F0ADA7FF386A17FDDDE8879133B4EFE03BED9C
-                CA09150BDFC0B7700CB65B5751C8D7C668AC62E887970F2468822396F03E33B5
-                ED87496334D6622896B6567940F041124E22C7B28BA51DC77E089E43BF2C4A97
-                4D7DE6E6A0B11643B106CD1C84E03D4C602DFD53B80EAF673EED243E08FB507B
-                D8A3C7BCD503FB77C428F621B8EAAD1BF11E43BD64AE859E1EC1E730C97A6115
-                1CCF53EC03D47EFA36152B98AD5F3EF2F556121343B12C66AF998B22A8601235
-                409DB32B70C21901B638D4CC7692B4E06A595FA77C35C65B1D144BC7610B0C7A
-                1E420BD62CD52317E0BCB7FAD945681B14DD5AE6D363631C144B3151153B6775
-                F2216FC10CAE668F35234F8A985A610D5C662933CFD933D411944830DF53BEE5
-                B685622D43C5D699EEF259EE6AF964A350C1BACF6ACF3D14D1074826DF39F567
-                E082C96010E7A2A969CC59EC818C7CCAEDEED4D908DA127B0979F71EBF4E5F0D
-                47F9E5AE1F5D37B09B708A65BC2A9BC0D275E0F2CC9A4120561F313E58533134
-                5E47DC3D624DCA864F0AFD07CCF95AC93BC37224A896EAAB8849EF7EDDBAEA48
-                A01B591A9F88AD733608E6FBC5B75CB18A5507157B269DCF72E7FDB40ADA120C
-                56225D111BA12E320EE87A118C6A46BCA5307049E2FFD2C6382816D44D4EB183
-                7E7868C18B7016B516763923C0A6A51B427DA782BC3517D6F71E8E688C337A28
-                56AD62C3456FDA1AC10F1D4987E11AEC6629376E68245A8537E023FA72664936
-                F599CFA657B36259CC6133470B92ECFAE5675B20B8AE972F6054D74BC52ADFF5
-                5220E15992447281572CEB0A46D13B403E2811BCC59E6C4396F289348DBC0B3F
-                7AAF709454B04021853E42753748BFC2F5CF4F1DFDBBFB119A090ADF1F9FF9D9
-                A018DD99751BD3CD6EC01963B127506F301D6D41E7EC8E83A2753D1C17A59B39
-                3204BF38F60A222F9859D5AB571FAAEBA6478AC8F6701AD4B8BFFED0AEA0820A
-                B6422CF60FE937DDEC80AE5CAE0000000049454E44AE426082}
+                03E5494441545847ED98CD4B545118C69DD1D250211835084C21B58CC14D1F7F
+                8320487F804805916D5AD6225A459B6815F40181418ACB284370DD366B25D987
+                412608A542A051E838D3EF39F71D19C63B33C7E9FA11CC032FE73DCF79CFFB3E
+                73EEB9F79E3B55155450C1EE22666D64C864327558A7FC582CF619FBE306F62B
+                D2E974DBC6C6C64B997CA32343DCDAC8C08AEAAAD5C8CC8F14910BDE69442698
+                7DDBC416E8A13D43B75626DFB826171401FEF9922128C9951FA0EDA09B405C7D
+                7575B55B08F6719AB15FB8CBF1787C96B151DA698D958BB20523B085E622ED79
+                041EC05FC55FA4FD89C86F8A41E0319AC3886CA66DE007ACE3BFC07F4AFB4331
+                DB45598211D68D985B14ED42C46F044F404FC2CDC32D075101884DF0035A717B
+                89ED23F610DC27B8DBC4CE04513B08894DA552AFB1370878453F694325A158CD
+                D15CE5502E1BDA1950A085826326F61E2BBAED9B497334D7728C29A70D450F92
+                DFA0E09456295F2CFD18E3B5D829FC0B32F9E23466610E9A6B39A694D3682F78
+                EF611227B127B829F6DE556CF36EA7F0416C10EB873F6AB4037316D8AFE3D833
+                6CCDE86CBE47B835CCB99C9BAF18BC9FC3141BD0D3403758BE580ADFC7AEE48B
+                15C4694C318A355AFCB47229A7721B5D125E8229A497829EB3ABD8A423017C0C
+                D3CA9EA670C1ABA531C5586C6E9C72E971D801EF753FF80AD6CA2548BC883F1F
+                B09B5BA1BF98D82C4C74BFE618A5F9F3CA89AB17CE96AB138650C14CAE23511B
+                6DBB0CAA8BB69E76854B99FB9C3D11B60D0AC1628F073DD757AE15CBAD1AAE9E
+                D5AE7341792824B813D3BE7C20C31F6285E2ECB5390BC9E2ACB5DE20C739731D
+                9453B95523A79EF6BB3B53E7C3FBA6DB2F08DD7BFC3A7D351CE1D7BB717C9DBA
+                AED3D59D7DC90501B81EB861EB7A815C836C85F7D6D50169182E0977975C53E2
+                E867F0BF635BBE56425758812498A3FD2A83D2BB5FA7AE4644265C50808FF417
+                CC2F098BFD12F45C5FB91A2DB76AB87A563BF4D3CA6B4B30598574446CC6D741
+                C6017F0D1B6795324615043169E63FD71CA334BF55397197F1BD7EB8AFE02512
+                CFE23660BD8E04F0BA747A83BD9520A3B74063C4BCC31DD39C807550AE06E586
+                5F0AA8E2F0BEE9D856A3145EC7FAB8949B27340AAD51F01A7BFB61D8F610A731
+                C528D668F76A562EE5546EA3A30545F6FCF0B32D905CC7CB91088F9723CA6943
+                3B030A9EA458240778E5B2216F943C03844185287E937DD98D80723E916688BB
+                03FF2188F2475982058A16FA085D41887B85F303F4CF4F23E2F6F623341788FC
+                3F3EF3F38198264CA7319DBA86C421F6318DDE60FAEAF07ACEEE3A10DBCECA4E
+                C8E41B1D19BC5F1CFB05910B6655F5EA4DC9CC8F1491EDE12CD0F87FFDA15D41
+                0515144355D55FFD6D2871C5D5921E0000000049454E44AE426082}
             end>
           Align = Right
           Height = 45.000000000000000000
@@ -189,18 +185,19 @@ inherited FMapGMaps: TFMapGMaps
                 PNG = {
                   89504E470D0A1A0A0000000D494844520000002C0000002C08060000001E845A
                   01000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                  015F494441545847ED98312F04611086772F1112A2D368241AAD443414FE889A
-                  92D23FA0A4A4F64328689CE45A8D44A3A110212127BB9ED9FD0ACD31B73B5FD8
-                  CF3CC9E4DD9B4BDE7B6F7676F77299E3384E5AE441BFA52CCB45640B9DAA3BB6
-                  E479FE869CA0B7756734DAC0CBC821355335EC79A176093CA85F8EA617B433A4
-                  1F98F5F840E414B6AEE0351663EF30C757ECDA71F5464BF0DAC66B9543F902D1
-                  76F89D0F7AB428F1AA2DF5F85D22364D76F81EBD96BE012B4C751E554F588504
-                  A6CEA87E5114FB68CFA282579F126F19CA8F3499F0037A237D039698EA1CAA9E
-                  70FA171DE187D493510D83AD9A262B71891E49DF801DA6BA86FA6DEDEB84E534
-                  BE4ADF8069A63A81A67BD13599F01D7A217D03D609B980AA03AB90C054671F1C
-                  BFFA68FE173B2CBF619FA56FC02C2127D1A881CFD103E91BB047C80D346AE001
-                  C6A7D51B2DC16B132FF14E77873BF768F6C0B1D1EEF09FF933D0711C2729B2EC
-                  130FECFEEA486C7ED70000000049454E44AE426082}
+                  0171494441545847ED98B14AC4401086930DA2A0D8D9D80836B682D868E18B58
+                  6BA9A56FA0A5965AFB205A68E309D7DA0836365A89828726F1DB49DAD3CDED2E
+                  6796F96098B91DF86F3299DDE42E531445498BBCF5BF52D7F52A6EAFAAAAB966
+                  252CC6984FDC459EE78FCDCA785C0B5EC79D620BB2109E77EC908287CDC7F198
+                  D6F786F40B2ECBF21B676FA1B7B55A9DE83CC36CBC3B36C9B9243C416B1FAD4D
+                  427B01D16678C405BC8630ABD548BAA3A7446C2699E1673A712F094FD0DD6086
+                  97099D3BEC842D18BBC206ECEC63BC0961ADD600B3DAB6297F3249875FF00F76
+                  3D006B747809EFDCE1DE6DBACE05731BBF10FE908427E8CE1745314318AF6046
+                  E216E133497882EE0123B145A8C75A7F474216C21375869F10BE918427E86E33
+                  C32B84CE053B610BC67AFBE098EAA339FD19E6368E107E938427E82E724ACC12
+                  46DD74D7089F48C213748F18891DC2A8050FF9924B497882D62E5A563BDD194E
+                  FF67FEB449F6E5E7DFFC19A8288A921459F603BFC0D337D786B8ED0000000049
+                  454E44AE426082}
               end>
             Align = Client
             Height = 45.000000000000000000
@@ -239,12 +236,18 @@ inherited FMapGMaps: TFMapGMaps
         Name = 'Title'
         DataType = ftString
         Size = 20
+      end
+      item
+        Name = 'Index'
+        DataType = ftInteger
       end>
     IndexDefs = <>
     Params = <>
     StoreDefs = True
-    Left = 184
-    Top = 112
+    AfterPost = ClientDataSet1AfterPost
+    BeforeDelete = ClientDataSet1BeforeDelete
+    Left = 200
+    Top = 144
     object ClientDataSet1la: TFloatField
       FieldName = 'la'
     end
@@ -253,6 +256,9 @@ inherited FMapGMaps: TFMapGMaps
     end
     object ClientDataSet1Title: TStringField
       FieldName = 'Title'
+    end
+    object ClientDataSet1Index: TIntegerField
+      FieldName = 'Index'
     end
   end
   object BindingsList1: TBindingsList
@@ -275,5 +281,9 @@ inherited FMapGMaps: TFMapGMaps
     ScopeMappings = <>
     Left = 296
     Top = 152
+  end
+  object fgProgressDialog1: TfgProgressDialog
+    Left = 232
+    Top = 296
   end
 end
