--- a/TCY/Sources/Main.fmx
+++ b/TCY/Sources/Main.fmx
@@ -1931,6 +1931,7 @@ object FMain: TFMain
           TabOrder = 2
           Text = '  GMaps'
           Width = 281.000000000000000000
+          OnClick = ListBoxItem2Click
         end
       end
       object ListBox2: TListBox
