--- a/TCY/Sources/MapGMaps.fmx
+++ b/TCY/Sources/MapGMaps.fmx
@@ -60,18 +60,18 @@ inherited FMapGMaps: TFMapGMaps
         object Button1: TButton
           Align = Right
           Height = 43.000000000000000000
-          Position.X = 216.000000000000000000
+          Position.X = 200.000000000000000000
           TabOrder = 0
           Text = 'Adicionar'
-          Width = 168.000000000000000000
+          Width = 184.000000000000000000
           OnClick = Button1Click
         end
         object Button2: TButton
           Align = Left
           Height = 43.000000000000000000
           TabOrder = 1
-          Text = 'Cancelar'
-          Width = 161.000000000000000000
+          Text = 'Excluir'
+          Width = 193.000000000000000000
           OnClick = Button2Click
         end
       end
@@ -79,7 +79,7 @@ inherited FMapGMaps: TFMapGMaps
         Touch.InteractiveGestures = [LongTap, DoubleTap]
         Align = Top
         TabOrder = 1
-        Position.Y = 59.000000000000000000
+        Position.Y = 54.000000000000000000
         Width = 384.000000000000000000
         Height = 32.000000000000000000
         Margins.Top = 10.000000000000000000
@@ -100,7 +100,7 @@ inherited FMapGMaps: TFMapGMaps
       object rectMarkersTop: TRectangle
         Align = MostTop
         Fill.Color = xFF3767A2
-        Height = 49.000000000000000000
+        Height = 44.000000000000000000
         Margins.Left = -10.000000000000000000
         Margins.Right = -10.000000000000000000
         Position.X = -10.000000000000000000
@@ -111,96 +111,73 @@ inherited FMapGMaps: TFMapGMaps
         Width = 404.000000000000000000
         object Text2: TText
           Align = Client
-          Height = 49.000000000000000000
+          Height = 44.000000000000000000
           Text = 'Clique no Mapa para Adicionar um Marcador'
           TextSettings.FontColor = claWhite
-          Width = 255.000000000000000000
+          Width = 271.000000000000000000
         end
         object Image3: TImage
           MultiResBitmap = <
             item
-              Width = 44
-              Height = 44
+              Width = 32
+              Height = 32
               PNG = {
-                89504E470D0A1A0A0000000D494844520000002C0000002C08060000001E845A
-                01000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                03E5494441545847ED98CD4B545118C69DD1D250211835084C21B58CC14D1F7F
-                8320487F804805916D5AD6225A459B6815F40181418ACB284370DD366B25D987
-                412608A542A051E838D3EF39F71D19C63B33C7E9FA11CC032FE73DCF79CFFB3E
-                73EEB9F79E3B55155450C1EE22666D64C864327558A7FC582CF619FBE306F62B
-                D2E974DBC6C6C64B997CA32343DCDAC8C08AEAAAD5C8CC8F14910BDE69442698
-                7DDBC416E8A13D43B75626DFB826171401FEF9922128C9951FA0EDA09B405C7D
-                7575B55B08F6719AB15FB8CBF1787C96B151DA698D958BB20523B085E622ED79
-                041EC05FC55FA4FD89C86F8A41E0319AC3886CA66DE007ACE3BFC07F4AFB4331
-                DB45598211D68D985B14ED42C46F044F404FC2CDC32D075101884DF0035A717B
-                89ED23F610DC27B8DBC4CE04513B08894DA552AFB1370878453F694325A158CD
-                D15CE5502E1BDA1950A085826326F61E2BBAED9B497334D7728C29A70D450F92
-                DFA0E09456295F2CFD18E3B5D829FC0B32F9E23466610E9A6B39A694D3682F78
-                EF611227B127B829F6DE556CF36EA7F0416C10EB873F6AB4037316D8AFE3D833
-                6CCDE86CBE47B835CCB99C9BAF18BC9FC3141BD0D3403758BE580ADFC7AEE48B
-                15C4694C318A355AFCB47229A7721B5D125E8229A497829EB3ABD8A423017C0C
-                D3CA9EA670C1ABA531C5586C6E9C72E971D801EF753FF80AD6CA2548BC883F1F
-                B09B5BA1BF98D82C4C74BFE618A5F9F3CA89AB17CE96AB138650C14CAE23511B
-                6DBB0CAA8BB69E76854B99FB9C3D11B60D0AC1628F073DD757AE15CBAD1AAE9E
-                D5AE7341792824B813D3BE7C20C31F6285E2ECB5390BC9E2ACB5DE20C739731D
-                9453B95523A79EF6BB3B53E7C3FBA6DB2F08DD7BFC3A7D351CE1D7BB717C9DBA
-                AED3D59D7DC90501B81EB861EB7A815C836C85F7D6D50169182E0977975C53E2
-                E867F0BF635BBE56425758812498A3FD2A83D2BB5FA7AE4644265C50808FF417
-                CC2F098BFD12F45C5FB91A2DB76AB87A563BF4D3CA6B4B30598574446CC6D741
-                C6017F0D1B6795324615043169E63FD71CA334BF55397197F1BD7EB8AFE02512
-                CFE23660BD8E04F0BA747A83BD9520A3B74063C4BCC31DD39C807550AE06E586
-                5F0AA8E2F0BEE9D856A3145EC7FAB8949B27340AAD51F01A7BFB61D8F610A731
-                C528D668F76A562EE5546EA3A30545F6FCF0B32D905CC7CB91088F9723CA6943
-                3B030A9EA458240778E5B2216F943C03844185287E937DD98D80723E916688BB
-                03FF2188F2475982058A16FA085D41887B85F303F4CF4F23E2F6F623341788FC
-                3F3EF3F38198264CA7319DBA86C421F6318DDE60FAEAF07ACEEE3A10DBCECA4E
-                C8E41B1D19BC5F1CFB05910B6655F5EA4DC9CC8F1491EDE12CD0F87FFDA15D41
-                0515144355D55FFD6D2871C5D5921E0000000049454E44AE426082}
+                89504E470D0A1A0A0000000D4948445200000020000000200806000000737A7A
+                F4000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+                01C3494441545847ED96CB510241108677F74E00128009100004A0DED1000C80
+                002802C0BB012877F52EDE250103C000F00C7EFFD04B0DEC83D95D293CEC57D5
+                D5333D3DBDF3ECD9A8A5A509EBF57A24B16A2D12D375B934A94DD3013426361D
+                04CBDD415D2183388E7BCE686C369B056A8EBC2549B272C6008207C00706C898
+                0F77D02BF407E6E5B635EA62EB7B6D134483F91B98F935813FD1EF2A9B3983DA
+                E463BE857E95209866AE80CF48D7CC85C847BEEAA3BE662EA4740B08A43D7FD9
+                D6A23BF6D62DB90D6488A437E00B991DB43FA90C3755CEC41E041A1E2EA7CA36
+                BB8CE4F92986997239760DB5FC2B66F0AA0AC1BA1CAEB16BC9416DF251597DD4
+                9762E936940E80803D44A73DA57436C6CE477D15C3AAB96406C00C945E1F2566
+                4AAF9A08C97ABE4F7A265C3CC576568FB367C2CC00D8BB29722F31937FF574DA
+                8FE1FBA4E7C1C5536C67F5285D010ED102E95B55CC4CE762876EE7A3BE8A61D5
+                5C8E6DC19C43D461EFDCF562064B024EEC437B98ED413EAAAB8FFA522C4DC9A7
+                4E443FC82DF67A894830B393A6E2200878B2C7A8EA733C625F2FD07BCF31756D
+                8592969EE36FF414097A8ECFFE43D20806E467CC5AFCBF4C58115DBF90ECD8D2
+                524014FD02D6D7693E0AB0BFB00000000049454E44AE426082}
             end>
           Align = Right
-          Height = 45.000000000000000000
+          Height = 40.000000000000000000
           Margins.Right = 12.000000000000000000
           Margins.Bottom = 4.000000000000000000
-          Position.X = 328.000000000000000000
-          Width = 64.000000000000000000
+          Position.X = 332.000000000000000000
+          Width = 60.000000000000000000
           OnClick = Image3Click
         end
         object Rectangle3: TRectangle
           Align = Right
           Fill.Kind = None
-          Height = 49.000000000000000000
+          Height = 44.000000000000000000
           Margins.Right = 1.000000000000000000
-          Position.X = 255.000000000000000000
+          Position.X = 271.000000000000000000
           Sides = []
           Stroke.Color = xFF6A8EED
           Stroke.Thickness = 4.000000000000000000
-          Width = 72.000000000000000000
+          Width = 60.000000000000000000
           object Image1: TImage
             MultiResBitmap = <
               item
-                Width = 44
-                Height = 44
+                Width = 32
+                Height = 32
                 PNG = {
-                  89504E470D0A1A0A0000000D494844520000002C0000002C08060000001E845A
-                  01000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                  0171494441545847ED98B14AC4401086930DA2A0D8D9D80836B682D868E18B58
-                  6BA9A56FA0A5965AFB205A68E309D7DA0836365A89828726F1DB49DAD3CDED2E
-                  6796F96098B91DF86F3299DDE42E531445498BBCF5BF52D7F52A6EAFAAAAB966
-                  252CC6984FDC459EE78FCDCA785C0B5EC79D620BB2109E77EC908287CDC7F198
-                  D6F786F40B2ECBF21B676FA1B7B55A9DE83CC36CBC3B36C9B9243C416B1FAD4D
-                  427B01D16678C405BC8630ABD548BAA3A7446C2699E1673A712F094FD0DD6086
-                  97099D3BEC842D18BBC206ECEC63BC0961ADD600B3DAB6297F3249875FF00F76
-                  3D006B747809EFDCE1DE6DBACE05731BBF10FE908427E8CE1745314318AF6046
-                  E216E133497882EE0123B145A8C75A7F474216C21375869F10BE918427E86E33
-                  C32B84CE053B610BC67AFBE098EAA339FD19E6368E107E938427E82E724ACC12
-                  46DD74D7089F48C213748F18891DC2A8050FF9924B497882D62E5A563BDD194E
-                  FF67FEB449F6E5E7DFFC19A8288A921459F603BFC0D337D786B8ED0000000049
-                  454E44AE426082}
+                  89504E470D0A1A0A0000000D4948445200000020000000200806000000737A7A
+                  F4000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+                  00B2494441545847631805A360A0012394C60AFEFDFB3713CAA408303131A543
+                  991800AF03FEFFFF7F06CAA4083032329A40991880094A0F18187007E005A028
+                  806263A810D100A407A61F2A84158CA601A2420048F7027D710B2C482400EA51
+                  03EA2906B1F18500B10E0059FE19C42601F0022D560331287600A5801A0ED802
+                  C4CF204CA2811410FB8018F81C30341221A560E82742203DB0D9905280CF01A3
+                  95D168140CEE82881E8DD251300A061830300000C9FF7B2432BBD9DF00000000
+                  49454E44AE426082}
               end>
             Align = Client
-            Height = 45.000000000000000000
+            Height = 40.000000000000000000
             Margins.Bottom = 4.000000000000000000
-            Width = 72.000000000000000000
+            Width = 60.000000000000000000
             OnClick = Image1Click
           end
         end
@@ -214,12 +191,26 @@ inherited FMapGMaps: TFMapGMaps
       MultiResBitmap.LoadSize = 2
     end
   end
-  object LocationSensor1: TLocationSensor
+  object Popup1: TPopup [2]
+    Height = 113.000000000000000000
+    Position.X = 64.000000000000000000
+    Position.Y = 320.000000000000000000
+    TabOrder = 15
+    Width = 209.000000000000000000
+    object Button3: TButton
+      Align = Top
+      Height = 44.000000000000000000
+      TabOrder = 0
+      Text = 'Button3'
+      Width = 209.000000000000000000
+    end
+  end
+  object LocationSensor1: TLocationSensor [4]
     OnLocationChanged = LocationSensor1LocationChanged
     Left = 104
     Top = 104
   end
-  object ClientDataSet1: TClientDataSet
+  object ClientDataSet1: TClientDataSet [5]
     Aggregates = <>
     FieldDefs = <
       item
@@ -260,7 +251,7 @@ inherited FMapGMaps: TFMapGMaps
       FieldName = 'Index'
     end
   end
-  object BindingsList1: TBindingsList
+  object BindingsList1: TBindingsList [6]
     Methods = <>
     OutputConverters = <>
     Left = 340
@@ -275,13 +266,13 @@ inherited FMapGMaps: TFMapGMaps
       FillBreakGroups = <>
     end
   end
-  object BindSourceDB1: TBindSourceDB
+  object BindSourceDB1: TBindSourceDB [7]
     DataSet = ClientDataSet1
     ScopeMappings = <>
     Left = 296
     Top = 152
   end
-  object fgProgressDialog1: TfgProgressDialog
+  object fgProgressDialog1: TfgProgressDialog [8]
     Left = 232
     Top = 296
   end
